# auimusic

./: .clang-tidy  CMakeLists.txt  README.md  valgrind_suppressions.supp
.github/: tidy-summary.py
.github/workflows/: build.yml  code-quality.yml
src/: IFiniteMedia.h  MP3SoundStream.cpp  MP3SoundStream.h  MainWindow.cpp  MainWindow.h  MyUpdater.cpp  MyUpdater.h  dr_libs.c  fluent_icons.h  main.cpp  metadata.cpp  metadata.h
src/model/: Song.h  State.h
tests/: SumTest.cpp
